unpackaged/main/default/objects/Vivienda__c/Vivienda__c.object-meta.xml
<CustomObject>
    <label>Vivienda</label>
    <nameField>
        <label>Vivienda</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Viviendas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>