unpackaged/main/default/objects/Vivienda__c/fields/Cadena_Busqueda__c.field-meta.xml
<CustomField>
    <fullName>Cadena_Busqueda__c</fullName>
    <formula>&quot;lote &quot; &amp; Lote__c &amp; &quot; manzana &quot; &amp; Manzana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cadena Busqueda</label>
    <type>Text</type>
</CustomField>