unpackaged/main/default/objects/Vivienda__c/fields/Casa_Amueblada__c.field-meta.xml
<CustomField>
    <fullName>Casa_Amueblada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Casa Amueblada</label>
    <type>Checkbox</type>
</CustomField>