unpackaged/main/default/objects/Vivienda__c/fields/Casa_Muestra__c.field-meta.xml
<CustomField>
    <fullName>Casa_Muestra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Casa Muestra</label>
    <type>Checkbox</type>
</CustomField>