unpackaged/main/default/objects/Vivienda__c/fields/Check_Fideicomiso__c.field-meta.xml
<CustomField>
    <fullName>Check_Fideicomiso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Fideicomiso</label>
    <type>Checkbox</type>
</CustomField>