unpackaged/main/default/objects/Vivienda__c/fields/Check_Precio_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Check_Precio_Unitario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Precio Unitario</label>
    <type>Checkbox</type>
</CustomField>