unpackaged/main/default/objects/Vivienda__c/fields/Direccion_Trunc__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Trunc__c</fullName>
    <formula>LEFT(  Direccion__c  , 50)</formula>
    <label>Dirección Trunc</label>
    <type>Text</type>
</CustomField>