unpackaged/main/default/objects/Vivienda__c/fields/Esquina__c.field-meta.xml
<CustomField>
    <fullName>Esquina__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Esquina</label>
    <type>Checkbox</type>
</CustomField>