unpackaged/main/default/objects/Vivienda__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>17</fullName>
                <label>Disponible</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Reservado</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Formalizado</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Escriturado</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Entregado</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>No Disponible</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Migración / Disponible</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>