unpackaged/main/default/objects/Vivienda__c/fields/Estatus_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Vivienda__c</fullName>
    <label>Estatus Vivienda</label>
    <length>100</length>
    <type>Text</type>
</CustomField>