unpackaged/main/default/objects/Vivienda__c/fields/Excendente_M2__c.field-meta.xml
<CustomField>
    <fullName>Excendente_M2__c</fullName>
    <label>Excendente M2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>