unpackaged/main/default/objects/Vivienda__c/fields/Fecha_Ultimo_Avaluo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultimo_Avaluo__c</fullName>
    <label>Fecha Ultimo Avalúo</label>
    <type>Date</type>
</CustomField>