unpackaged/main/default/objects/Vivienda__c/fields/Fecha_Vencimiento_Avaluo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento_Avaluo__c</fullName>
    <label>Fecha Vencimiento Avalúo</label>
    <type>Date</type>
</CustomField>