unpackaged/main/default/objects/Vivienda__c/fields/Fideicomiso__c.field-meta.xml
<CustomField>
    <fullName>Fideicomiso__c</fullName>
    <label>Fideicomiso</label>
    <length>100</length>
    <type>Text</type>
</CustomField>