unpackaged/main/default/objects/Vivienda__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento</label>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Viviendas</relationshipLabel>
    <relationshipName>Viviendas</relationshipName>
    <type>Lookup</type>
</CustomField>