unpackaged/main/default/objects/Vivienda__c/fields/Frente_Parque__c.field-meta.xml
<CustomField>
    <fullName>Frente_Parque__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frente Parque</label>
    <type>Checkbox</type>
</CustomField>