unpackaged/main/default/objects/Vivienda__c/fields/Frente_rea__c.field-meta.xml
<CustomField>
    <fullName>Frente_rea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frente Área Municipal</label>
    <type>Checkbox</type>
</CustomField>