unpackaged/main/default/objects/Vivienda__c/fields/Id_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Id_Vivienda__c</fullName>
    <externalId>true</externalId>
    <label>Id Vivienda</label>
    <length>100</length>
    <type>Text</type>
</CustomField>