unpackaged/main/default/objects/Vivienda__c/fields/Import_Result__c.field-meta.xml
<CustomField>
    <fullName>Import_Result__c</fullName>
    <label>Import Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vivienda Ok</fullName>
                <default>true</default>
                <label>Vivienda Ok</label>
            </value>
            <value>
                <fullName>Price Book Entry Ok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>