unpackaged/main/default/objects/Vivienda__c/fields/Importe_del_Aval_o__c.field-meta.xml
<CustomField>
    <fullName>Importe_del_Aval_o__c</fullName>
    <label>Importe del Avalúo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>