unpackaged/main/default/objects/Vivienda__c/fields/Inhabilitado_Venta__c.field-meta.xml
<CustomField>
    <fullName>Inhabilitado_Venta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inhabilitado Venta</label>
    <type>Checkbox</type>
</CustomField>