unpackaged/main/default/objects/Vivienda__c/fields/Instalaciones__c.field-meta.xml
<CustomField>
    <fullName>Instalaciones__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instalaciones</label>
    <type>Checkbox</type>
</CustomField>