unpackaged/main/default/objects/Vivienda__c/fields/Lado_Sol__c.field-meta.xml
<CustomField>
    <fullName>Lado_Sol__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lado Sol</label>
    <type>Checkbox</type>
</CustomField>