unpackaged/main/default/objects/Vivienda__c/fields/Lado_Sombra__c.field-meta.xml
<CustomField>
    <fullName>Lado_Sombra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lado Sombra</label>
    <type>Checkbox</type>
</CustomField>