unpackaged/main/default/objects/Vivienda__c/fields/M2_Superficie__c.field-meta.xml
<CustomField>
    <fullName>M2_Superficie__c</fullName>
    <label>M2 Superficie</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>