unpackaged/main/default/objects/Vivienda__c/fields/Manzana__c.field-meta.xml
<CustomField>
    <fullName>Manzana__c</fullName>
    <label>Manzana</label>
    <length>20</length>
    <type>Text</type>
</CustomField>