unpackaged/main/default/objects/Vivienda__c/fields/Nombre_Trunc__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Trunc__c</fullName>
    <formula>LEFT( Name , 50)</formula>
    <label>Nombre Trunc</label>
    <type>Text</type>
</CustomField>