unpackaged/main/default/objects/Vivienda__c/fields/Num_Interior__c.field-meta.xml
<CustomField>
    <fullName>Num_Interior__c</fullName>
    <label>Num Interior</label>
    <length>20</length>
    <type>Text</type>
</CustomField>