unpackaged/main/default/objects/Vivienda__c/fields/Num_Interno__c.field-meta.xml
<CustomField>
    <fullName>Num_Interno__c</fullName>
    <label>Num Interno</label>
    <length>100</length>
    <type>Text</type>
</CustomField>