unpackaged/main/default/objects/Vivienda__c/fields/Porcentaje_Obra_Fisico__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Obra_Fisico__c</fullName>
    <label>Porcentaje Obra Físico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>