unpackaged/main/default/objects/Vivienda__c/fields/Precio_m2_Excedente__c.field-meta.xml
<CustomField>
    <fullName>Precio_m2_Excedente__c</fullName>
    <label>Precio m2 Excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>