unpackaged/main/default/objects/Vivienda__c/fields/Precio_Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Precio_Presupuesto__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Precio Presupuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>