unpackaged/main/default/objects/Vivienda__c/fields/Precio_Total_Excedente__c.field-meta.xml
<CustomField>
    <fullName>Precio_Total_Excedente__c</fullName>
    <formula>Precio_m2_Excedente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Total Excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>