unpackaged/main/default/objects/Vivienda__c/fields/Precio_Total_F__c.field-meta.xml
<CustomField>
    <fullName>Precio_Total_F__c</fullName>
    <formula>Prototipo__r.Precio_Presupuesto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Presupuesto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>