unpackaged/main/default/objects/Vivienda__c/fields/Precio_Total_FOrmula__c.field-meta.xml
<CustomField>
    <fullName>Precio_Total_FOrmula__c</fullName>
    <formula>Precio_Presupuesto__c +  Total_Atributos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>