unpackaged/main/default/objects/Vivienda__c/fields/Precio_Total_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Precio_Total_Unitario__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Precio Total Unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>