unpackaged/main/default/objects/Vivienda__c/fields/Precio_Unitario_Chk_Img__c.field-meta.xml
<CustomField>
    <fullName>Precio_Unitario_Chk_Img__c</fullName>
    <formula>IF(Check_Precio_Unitario__c, 
     &quot;https://javer--preprod.sandbox.lightning.force.com/resource/1689191345000/CHK_Negro_Small&quot;,
     &quot;https://javer--preprod.sandbox.lightning.force.com/resource/1689191491000/CHK_BlanK&quot;
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Precio Unitario</label>
    <type>Text</type>
</CustomField>