unpackaged/main/default/objects/Vivienda__c/fields/Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Prototipo__c</fullName>
    <label>Prototipo</label>
    <referenceTo>Prototipo__c</referenceTo>
    <relationshipLabel>Viviendas</relationshipLabel>
    <relationshipName>Viviendas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>