unpackaged/main/default/objects/Vivienda__c/fields/Sobre_Avenida__c.field-meta.xml
<CustomField>
    <fullName>Sobre_Avenida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sobre Avenida</label>
    <type>Checkbox</type>
</CustomField>