unpackaged/main/default/objects/Vivienda__c/fields/sUB_UEN__c.field-meta.xml
<CustomField>
    <fullName>sUB_UEN__c</fullName>
    <label>sUB-UEN</label>
    <length>5</length>
    <type>Text</type>
</CustomField>