unpackaged/main/default/objects/Vivienda__c/fields/Superficie_Excedente__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Excedente__c</fullName>
    <label>Superficie Excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>