unpackaged/main/default/objects/Vivienda__c/fields/Tiene_DTI__c.field-meta.xml
<CustomField>
    <fullName>Tiene_DTI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene DTI</label>
    <type>Checkbox</type>
</CustomField>