unpackaged/main/default/objects/Vivienda__c/fields/Tiene_DTU__c.field-meta.xml
<CustomField>
    <fullName>Tiene_DTU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene DTU</label>
    <type>Checkbox</type>
</CustomField>