unpackaged/main/default/objects/Vivienda__c/fields/Total_Atributos__c.field-meta.xml
<CustomField>
    <fullName>Total_Atributos__c</fullName>
    <label>Total Atributos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>