unpackaged/main/default/objects/Vivienda__c/fields/Unidad_Privativa__c.field-meta.xml
<CustomField>
    <fullName>Unidad_Privativa__c</fullName>
    <label>Unidad Privativa</label>
    <length>10</length>
    <type>Text</type>
</CustomField>