unpackaged/main/default/objects/Vivienda__c/fields/Uno_Sembrado_Import__c.field-meta.xml
<CustomField>
    <fullName>Uno_Sembrado_Import__c</fullName>
    <label>Uno Sembrado Import</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>DL230725-2:45PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>