unpackaged/main/default/objects/Vivienda__c/fields/Valor_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Valor_Vivienda__c</fullName>
    <label>Valor Vivienda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>