unpackaged/main/default/objects/Vivienda__c/listViews/Viviendas_Bosque_Real.listView-meta.xml
<ListView>
    <fullName>Viviendas_Bosque_Real</fullName>
    <columns>NAME</columns>
    <columns>Fraccionamiento__c</columns>
    <columns>Prototipo__c</columns>
    <columns>Num_Interno__c</columns>
    <columns>Estatus__c</columns>
    <columns>Uno_Sembrado_Import__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Precio_Total_F__c</columns>
    <columns>Precio_Presupuesto__c</columns>
    <columns>Precio_Total__c</columns>
    <columns>Precio_Total_FOrmula__c</columns>
    <columns>Precio_Total_Excedente__c</columns>
    <columns>Precio_Total_Unitario__c</columns>
    <columns>Precio_Unitario__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fraccionamiento__c</field>
        <operation>equals</operation>
        <value>bosque real</value>
    </filters>
    <label>Viviendas Bosque Real</label>
</ListView>